Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-2019

Error in memory allocation for even small messages.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 3.1.0, 3.1.1, 3.1.2, 3.1.3, 3.1.4
    • 3.2.0
    • DOM
    • windows XP vc9, linux and solaris

    Description

      I have my xsd schema using which i have created my standard xml.
      After creating the xml i fill the values for each tag in my xml.
      I get memory allocation error when i try to traverse through the xml and set the values for each tag in my xml.
      I get allocation error when my program calls the setTextcontent() of xerces.It is crashing in DOMDocumentImpl.cpp allocate(size).(2nd if condition in that function)

      Is there any setting that needs to be done for memory allocation? How much is the maximum size of xml that xerces can parse?how do we manage the memory allocation and deallocation in DOM?

      Attachments

        1. zippedfiles.zip
          620 kB
          mahalakshmi

        Activity

          People

            amassari Alberto Massari
            mahalakshmi mahalakshmi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: