DOMDocument now stores the "big buffers" in a separate list, so that incomplete DOMText nodes can be released when parsing long strings (XERCESC-2019)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@1528170 13f79535-47bb-0310-9956-ffa450edef68